syntax = "proto3";

package pb;

option go_package = "github.com/shakezidin/user";

service UserService{
    rpc UserSignup(SignupRequest) returns(Result);
    rpc UserLogin(LoginRequest) returns(Result);
}

message SignupRequest {
    string username = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message Result{
    string status = 1;
    string error =2;
    string message = 3;
}

message LoginRequest{
    string username = 1;
    string password = 2;
    string role = 3;
}





